deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:   # Запускаем 1 новый pod перед удалением старого
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1         # Максимально количество новых контейнеров, которые могут быть созданы во время обновления
      maxUnavailable: 0
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      automountServiceAccountToken: false  # отключаем автоматическое монтирование, если не нужно
      containers:
        - name: gateway
          image: my-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
              ephemeral-storage: "0Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"

#          livenessProbe:
#            httpGet:
#              path: /actuator/health  # эндпоинт health для проверки состояния
#              port: 8080
#            initialDelaySeconds: 300    # Задержка перед первым запросом
#            periodSeconds: 60          # Интервал проверки
#            timeoutSeconds: 30          # Время ожидания ответа
#            failureThreshold: 3        # Количество неудачных попыток до перезапуска
#
#          readinessProbe:
#            httpGet:
#              path: /actuator/health  # тот же эндпоинт для проверки готовности
#              port: 8080
#            initialDelaySeconds: 60    # Задержка перед первым запросом
#            periodSeconds: 20          # Интервал проверки
#            timeoutSeconds: 30         # Время ожидания ответа
#            failureThreshold: 3
